--- a/src/renderer/src/shared/styled/index.css
+++ b/src/renderer/src/shared/styled/index.css
@@ -87,9 +87,9 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  overflow: hidden;
   border-radius: 0;
   box-sizing: border-box;
+  font-family: 'Open Sans';
 }
 
 body {
