--- a/src/renderer/src/shared/styled/index.css
+++ b/src/renderer/src/shared/styled/index.css
@@ -93,6 +93,12 @@ video {
   overflow: hidden;
 }
 
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
 body {
   line-height: 1;
   border-radius: 0;
